--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="js/flipclock.js"></script>	
 	</head>
 	<body>
-        <h1>Countdown to FNV</h1>
+        <h1>First rule about FNV; you don't talk about FNV.</h1>
 		<div class="clock" style="margin:2em;"></div>
 		
 		<script type="text/javascript">
